<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Game"
    android:id="@+id/background"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/result_space"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ball"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ball3"
            android:contentDescription="@string/ball" />

        <ImageView
            android:id="@+id/purpose"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/purpose3"
            android:contentDescription="@string/purpose" />

        <ImageView
            android:id="@+id/endpoint"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/endpoint"
            android:contentDescription="@string/spiderweb" />

    </FrameLayout>
    
</LinearLayout>