<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Instruction"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/result1"
        android:layout_width="234dp"
        android:layout_height="179dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:fontFamily="serif-monospace"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/instruction_part1"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result2"
        android:layout_width="234dp"
        android:layout_height="136dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="serif-monospace"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/instruction_part2"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result1" />

    <ImageView
        android:id="@+id/purpose"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="56dp"
        android:src="@drawable/purpose3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/result"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/endpoint"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/endpoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/result2"
        app:layout_constraintTop_toBottomOf="@+id/purpose" />

    <TextView
        android:id="@+id/result3"
        android:layout_width="392dp"
        android:layout_height="91dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="serif-monospace"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/goodLuck"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:onClick="goBack"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result3" />

</android.support.constraint.ConstraintLayout>